--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     </video><br><br>
     <audio controls>
         <source src="audio/_New_WhatsApp_Status_Video_2019_1.mp3" type="audio/mp3">
+    </audio> <audio controls>
+        <source src="audio/01 - A2 - Tum Hi Ho [DJMaza].mp3" type="audio/mp3">
     </audio>
     <h2 align="center">Youtube video</h2>
     <iframe width="620" height="360" src="https://www.youtube.com/embed/7V86hGMarkE " title="YouTube video player " frameborder="0 " allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture " allowfullscreen></iframe>
